# CellAutomata

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTINUE.md  Dockerfile  IMAGE_GEN_HANDOFF.md  LICENSE  PRD.md  README.md  SECURITY.md  cell.py  cellular_automaton.py  main.py  main_new.py  manual.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml
cellauto/: __init__.py  __main__.py  app.py  blobgeom.py  channel.py  character.py  diagrams.py  engine.py  export.py  field.py  grid.py  hires.py  mascot.py  mascot_image.py  narrative.py  netviz.py  provenance.py  renderer.py  renderer_sem.py  sem_config.py  sprites.py  tutorial.py
cellauto/rules/: __init__.py  base.py  conway.py  natural_selection.py  params.py  wolfram1d.py
cellauto/web/: __init__.py  server.py  wsgi.py
discovery/: README.md  animhunt_top.json  colony_top.json  complex_top.json  deeptime_verdicts.json  grand_top.json  magic_champions.json  mandalax_top.json  monkeys_champions.json  needle_deep_rank.json  needle_rank.json  sacred_geometry.json
docs/: FREE_MVP.md  GO_TO_MARKET.md  MONETIZATION.md  POND_BOUNTY.md  PRD_LAB_EXPERIMENTS.md  PRD_LIFE_DIGITAL_ORGANISMS.md  PRD_ONTOGENY.md  PRD_SECURITY_AUDIT.md  PRD_SEM_VISUALIZATION.md  PRD_VIBEVOICE_MCP.md  PRD_WEB9_PRO.md  PRICING.md  PUNCHLIST.md  RELEASE_NOTES_v3.7.0.md  ROADMAP.md  VALIDATION_KIT.md  hub.css  index.html  science.md  web-assets-spec.md
docs/design/: REAL_LAB_ROADMAP.md  UX_SPEC_WEB7.md  V3_2_LIVING_COLONY.md  WEB8_PLAN.md  catalytic-silence.md  render_prima_materia.py
docs/ontogeny/: README.md  app.js  index.html  render.js  sim.js  styles.css
docs/review/: APPLICATION_REVIEW_v4.1.md  ISSUE_REGISTER.md
docs/v4/: index.html  sem.css  sem.js
docs/web/: README.md  index.html  life.js  presets.js  sim.js  styles.css
docs/web10/: DESIGN.md  index.html  main.js  scene.js  styles.css
docs/web2/: PUNCHLIST.md  README.md  index.html  main.js  styles.css
docs/web3/: PUNCHLIST.md  README.md  index.html  main.js  sem.js  sprites.js  styles.css  viridis.js
docs/web4/: PUNCHLIST.md  README.md  index.html  main.js  scene.js  styles.css
docs/web6/: index.html  main.js  scene.js  styles.css
docs/web7/: PUNCHLIST.md  README.md  index.html  main.js  styles.css
docs/web8/: README.md  SOCIAL_MEDIA_HANDOFF.md  blobgeom.js  guide.css  guide.js  index.html  intents.js  main.js  narration.js  styles.css
docs/web9/: README.md  SOCIAL_MEDIA_HANDOFF.md  app.js  blobgeom.js  guide.css  guide.js  hero3d.js  index.html  intents.js  main.js  narration.js  sem.js  sem_unreal.js  server.py  sprites.js  studio.js  (+3 more)
media/: MEDIA_INDEX.md
server/: __init__.py  app.py  auth.py  billing.py  catalog.py  config.py  render.py
tests/: test_b8_sprites.py  test_b_narrative_sprites.py  test_blobgeom.py  test_channel.py  test_character.py  test_cli_subprocess.py  test_coacervate.py  test_conway.py  test_e2_control.py  test_engine.py  test_export_and_edges.py  test_extended_pipeline.py  test_genetic_code.py  test_genetic_code_hgt.py  test_grayscott.py  test_grid.py  test_hires.py  test_homochirality.py  test_hypercycle.py  test_life.py  test_life_vm.py  test_life_vm_parity.py  test_luca.py  test_mascot_image.py  test_minerals.py  test_narrative.py  test_natural_selection.py  test_netviz.py  test_pipeline.py  test_pipeline_handoff.py  test_protocol.py  test_provenance.py  test_raf.py  test_realdata.py  test_rna_world.py  test_sem_renderer.py  test_sem_sprites.py  test_server_render.py  test_stage2_roundtrip.py  test_stage4_error_threshold.py  (+7 more)
tools/: anim_hunt.py  bake_life_sprites.py  beauty_loop.py  beauty_ultra.py  champions_reel.py  colony_hunt.py  concepts.py  curate_library.py  deep_time.py  discover.py  discover_complex.py  explainer.py  grand_search.py  hero_film.py  life_reel.py  make_progress_video.py  mandala.py  mandala_film.py  mandala_hires.py  mandala_morph.py  mandala_x.py  monkeys.py  needle.py  ontogeny_preview.mjs  relit.py  relit_mandala.py  render_aaa_visuals.py  render_deeptime.py  render_life_video.py  render_long.py  render_long_gs.py  render_mascot_hero.py  render_monkeys.py  render_narrative_art.py  render_release_poster.py  render_sprites.py  review_screens.py  run_sweep.sh  schedule.py  sem_feed.py  (+9 more)
(+226 files in other folders)
