[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellauto"
version = "4.2.0"
description = "Scientifically-grounded abiogenesis sandbox with SEM-grade live rendering (v4.0). Coupled 12-stage chemistry-to-life pipeline (real Eigen-Schuster hypercycle ODE, Helfrich curvature, Miyazawa-Jernigan fitness, pathway-graph LUCA) rendered as a live scanning-electron-microscope feed — depth-shaded warm-sepia or cool-mono micrographs with crosshair reticle, LIVE SEM FEED badge, and scale-bar. Desktop Tk client (UX parity with the Flask web client) + optional GPU acceleration path."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "rizzleroc" }]
keywords = ["cellular automata", "conway", "wolfram", "simulation", "tkinter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cellauto = "cellauto.__main__:main"

[project.urls]
Homepage = "https://github.com/rizzleroc/CellAutomata"
Issues = "https://github.com/rizzleroc/CellAutomata/issues"

[tool.setuptools.packages.find]
include = ["cellauto*"]
exclude = ["tests*", "exports*", "snapshots*"]

[tool.setuptools.package-data]
cellauto = [
    "assets/*.png",
    "assets/*.ico",
    "assets/fonts/*.ttf",
    "assets/sprites/*/*.png",
    "assets/narrative/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Coverage is measured on the science / engine / data modules. The Tk-dependent
# integration code (the GUI shell, the mascot canvas widget, the CLI entry,
# and the canvas renderer) needs a real display to exercise and is verified
# manually + via the headless smokes documented in docs/ROADMAP.md; it would
# otherwise drag the headline coverage number with it without saying anything
# meaningful about the scientific correctness the tests are checking.
[tool.coverage.run]
omit = [
    "cellauto/__main__.py",
    "cellauto/app.py",
    "cellauto/mascot.py",
    "cellauto/renderer.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
